Remove protected email

--- a/policy/index.html
+++ b/policy/index.html
@@ -448,7 +448,7 @@ td, th {
                 Clicking the unsubscribe link at the bottom of any marketing email we send.
             </p>
             <p>
-                Contacting Us directly at <a href="/cdn-cgi/l/email-protection#17747f787478636265397562647e7972646457707a767e7b3974787a" style="text-decoration:none"><u><span style="color:#1155cc"><span class="__cf_email__" data-cfemail="e5868d8a868a919097cb8790968c8b809696a58288848c89cb868a88">[email&#160;protected]</span></span></u></a>.
+                Contacting Us directly at chocotur.business@gmail.com.
             </p>
             <p>
                 &#xa0;
@@ -495,7 +495,7 @@ td, th {
                 </li>
             </ul>
             <p>
-                To exercise any of these rights, please contact us at <a href="/cdn-cgi/l/email-protection#05666d6a666a7170772b6770766c6b607676456268646c692b666a68" style="text-decoration:none"><u><span style="color:#1155cc"><span class="__cf_email__" data-cfemail="395a51565a564d4c4b175b4c4a50575c4a4a795e54585055175a5654">[email&#160;protected]</span></span></u></a>
+                To exercise any of these rights, please contact us at chocotur.business@gmail.com
             </p>
             <h2 style="margin-top:14pt; page-break-inside:auto; page-break-after:auto">
                 <a id="_id0stz6zhp5f"></a>Links to Other Websites
@@ -528,7 +528,7 @@ td, th {
                 If you have any questions about this Privacy Policy, You can contact us:
             </p>
             <p>
-                ● By sending us an email: <a href="/cdn-cgi/l/email-protection#97f4fff8f4f8e3e2e5b9f5e2e4fef9f2e4e4d7f0faf6fefbb9f4f8fa" style="text-decoration:none"><u><span style="color:#1155cc"><span class="__cf_email__" data-cfemail="2c4f44434f4358595e024e595f4542495f5f6c4b414d4540024f4341">[email&#160;protected]</span></span></u></a>
+                ● By sending us an email: chocotur.business@gmail.com
             </p>
             <div style="clear:both">
                 <p style="text-align:right">
